--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+crispy-bootstrap5==0.7
 Django==3.2
+django-crispy-forms==1.14.0
 django-summernote==0.8.20.0
 pytz==2022.7.1
 sqlparse==0.4.3
