--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ coverage==7.1.0
 crispy-bootstrap5==0.7
 dj-database-url==1.2.0
 Django==3.2
+django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
+django-js-asset==2.0.0
 django-storages==1.13.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 jmespath==1.0.1
+Pillow==9.4.0
 psycopg2==2.9.5
 pytz==2022.7.1
 s3transfer==0.6.0
