--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coverage==7.1.0
 crispy-bootstrap5==0.7
 dj-database-url==1.2.0
 Django==3.2
+django-allauth==0.54.0
 django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-js-asset==2.0.0
@@ -12,8 +13,12 @@ django-storages==1.13.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 jmespath==1.0.1
+oauthlib==3.2.2
 Pillow==9.4.0
 psycopg2==2.9.5
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7.1
+requests-oauthlib==1.3.1
 s3transfer==0.6.0
 sqlparse==0.4.3
