--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,37 @@
 asgiref==3.6.0
-boto3==1.26.69
-botocore==1.29.69
-coverage==7.1.0
+backports.zoneinfo==0.2.1
+bleach==6.0.0
+boto3==1.26.123
+botocore==1.29.123
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cloudinary==1.33.0
 crispy-bootstrap5==0.7
-dj-database-url==1.2.0
-Django==3.2
+cryptography==40.0.2
+defusedxml==0.7.1
+dj-database-url==2.0.0
+dj3-cloudinary-storage==0.0.6
+Django==4.2
 django-allauth==0.54.0
 django-ckeditor==6.5.1
-django-crispy-forms==1.14.0
+django-crispy-forms==2.0
 django-js-asset==2.0.0
 django-storages==1.13.2
 django-summernote==0.8.20.0
-gunicorn==20.1.0
+idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.2
-Pillow==9.4.0
-psycopg2==2.9.5
+Pillow==9.5.0
+pycparser==2.21
 PyJWT==2.6.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
-pytz==2022.7.1
+requests==2.29.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
-sqlparse==0.4.3
+six==1.16.0
+sqlparse==0.4.4
+typing_extensions==4.5.0
+urllib3==1.26.15
+webencodings==0.5.1
