--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.6.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 bleach==6.0.0
 boto3==1.26.123
 botocore==1.29.123
@@ -23,6 +23,7 @@ idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.5.0
+psycopg2==2.9.6
 pycparser==2.21
 PyJWT==2.6.0
 python-dateutil==2.8.2
