--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.6.0
 backports.zoneinfo;python_version<"3.9"
 bleach==6.0.0
-boto3==1.26.123
+# boto3==1.26.123
 botocore==1.29.123
 certifi==2022.12.7
 cffi==1.15.1
@@ -14,7 +14,7 @@ dj-database-url==2.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2
 django-allauth==0.54.0
-django-ckeditor==6.5.1
+# django-ckeditor==6.5.1
 django-crispy-forms==2.0
 django-js-asset==2.0.0
 django-storages==1.13.2
