--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-crispy-forms==2.0
 django-js-asset==2.0.0
 django-storages==1.13.2
 django-summernote==0.8.20.0
+gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.2
