--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ __pycache__/
 node_modules/
 .github/
 cloudinary_python.txt
+env
+
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
